fix(lutris): minor fixes

--- a/w3c.yaml
+++ b/w3c.yaml
@@ -5,7 +5,7 @@ name: "W3Champions"
 runner: wine
 script:
   files:
-    - setup:
+    - battlenet:
         filename: Battle.net-Setup.exe
         url: https://www.battle.net/download/getInstallerForGame?os=win&version=LIVE&gameProgram=BATTLENET_APP
     - w3champions:
@@ -21,26 +21,31 @@ script:
   installer:
     - task:
         arch: win64
-        description: Creating 64bit Wine prefix.
+        description: "Creating 64bit Wine prefix."
         name: create_prefix
         prefix: $GAMEDIR
     - task:
         arch: win64
         description: "Installing W3Champions..."
         executable: w3champions
+        prefix: $GAMEDIR
         name: wineexec
     - task:
         arch: win64
-        executable: setup
+        executable: battlenet
         name: wineexec
         description: "Installing Battle.net"
+        prefix: $GAMEDIR
     - task:
         arch: win64
         description: "Installing WebView2"
+        prefix: $GAMEDIR
         executable: webview2
         name: wineexec
         exclude_processes: MicrosoftEdgeUpdate.exe
     - task:
+        arch: win64
+        description: "Setting msedgewebview2.exe to Windows 7 so WebView2 apps render instead of black screen"
         key: Version
         name: set_regedit
         path: HKEY_CURRENT_USER\Software\Wine\AppDefaults\msedgewebview2.exe
